--- a/index.html
+++ b/index.html
@@ -164,26 +164,37 @@
              ул. Большая Конюшенная, 19/8
           </li>
         </ul>
-        <img src="" class="contacts__map" alt="ул. Большая Конюшенная, 19/8">
+        <picture>
+          <source type="image/webp" media="(min-width: 1100px)" srcset="img/map-desktop.webp, img/map-desktop2x.webp 2x">
+          <source type="image/webp" media="(min-width: 660px)" srcset="img/map-tablet.webp, img/map-tablet2x.webp 2x">
+          <source type="image/webp" srcset="img/map-mobile.webp, img/map-mobile2x.webp 2x">
+          <source media="(min-width: 1100px)" srcset="img/map-desktop.jpg, img/map-desktop2x.jpg 2x">
+          <source media="(min-width: 660px)" srcset="img/map-tablet.jpg, img/map-tablet2x.jpg 2x">
+          <img src="img/map-mobile.jpg" srcset="img/map-mobile2x.jpg 2x" class="contacts__map" alt="ул. Большая Конюшенная, 19/8">
+        </picture>
         <div class="contacts__marker"></div>
       </section>
 
     </main>
 
     <footer class="page-footer">
-      <a href="#" class="page-footer__logo"></a>
-      <ul class="page-footer__list social__list">
+      <a href="#" class="page-footer__logo">
+        <svg class="footer-logo" title="Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 146.3 40.37" width="147" height="40"><g class="logo-name" fill="#283645"><path d="M71.87 18.66c0-.71.58-1.29 1.26-1.29h7.18c5.09 0 8.44 2.7 8.44 7.15v.06c0 4.86-4.06 7.37-8.85 7.37h-5.47v6.83c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29l-.01-20.12zm8.12 10.98c3.73 0 6.18-2 6.18-4.96v-.06c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92l5.57-.01zM93.6 18.5c0-.71.58-1.29 1.25-1.29.71 0 1.29.58 1.29 1.29v20.28c0 .71-.58 1.29-1.29 1.29-.68 0-1.25-.58-1.25-1.29V18.5zM102.74 18.53c0-.68.58-1.26 1.26-1.26h.35c.58 0 .93.29 1.29.74l13.68 17.45v-17c0-.68.55-1.26 1.26-1.26.68 0 1.22.58 1.22 1.26v20.35c0 .68-.48 1.19-1.16 1.19h-.13c-.55 0-.94-.32-1.32-.77l-13.98-17.87v17.45c0 .68-.55 1.26-1.26 1.26-.68 0-1.22-.58-1.22-1.26l.01-20.28zM128.17 18.5c0-.71.58-1.29 1.26-1.29.71 0 1.29.58 1.29 1.29v12.33l12.85-13.17c.29-.26.58-.45 1-.45.68 0 1.22.61 1.22 1.26 0 .35-.16.64-.42.9l-7.98 7.92 8.56 10.56c.22.29.35.55.35.94 0 .68-.58 1.29-1.29 1.29-.48 0-.81-.26-1.03-.58l-8.4-10.46-4.86 4.86v4.89c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29V18.5z"/></g><path fill="#d22856" d="M60.46 28.02c0-.01-5.17-21.36-5.17-21.36C54.93 4.3 52.69 0 46.69 0c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5c4.86 0 5.58 3.73 5.64 4.14l4.77 19.7h-2.07c-.74-5.93-5.8-10.53-11.93-10.53s-11.19 4.6-11.93 10.53h-1.82c-.74-5.93-5.8-10.53-11.93-10.53S6.23 20.92 5.49 26.84H3.42l4.77-19.7C8.25 6.73 8.97 3 13.83 3c.83 0 1.5-.67 1.5-1.5S14.65 0 13.83 0c-6.01 0-8.24 4.3-8.6 6.65 0 0-5.17 21.36-5.18 21.36-.27 1.11.53 1.83 1.43 1.83H5.5c.74 5.93 5.8 10.53 11.93 10.53s11.19-4.6 11.93-10.53h1.81c.74 5.93 5.8 10.53 11.93 10.53s11.19-4.6 11.93-10.53h4.01c.89 0 1.69-.71 1.42-1.82zm-34.15 1.82c-.71 4.27-4.42 7.53-8.9 7.53s-8.18-3.26-8.9-7.53c-.08-.49-.13-.99-.13-1.5s.05-1.01.13-1.5c.71-4.27 4.42-7.53 8.9-7.53s8.18 3.26 8.9 7.53c.08.49.14.99.14 1.5 0 .52-.05 1.02-.14 1.5zm25.68 0c-.72 4.27-4.42 7.53-8.9 7.53-4.47 0-8.18-3.26-8.9-7.53-.08-.49-.14-.99-.14-1.5s.05-1.01.14-1.5c.72-4.27 4.42-7.53 8.9-7.53s8.18 3.26 8.9 7.53c.08.49.13.99.13 1.5.01.52-.05 1.02-.13 1.5z"/></svg>
+        <svg class="footer-logo--desktop" title="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 146.3 40.37" width="147" height="40"><g class="logo-name" fill="#283645"><path d="M71.87 18.66c0-.71.58-1.29 1.26-1.29h7.18c5.09 0 8.44 2.7 8.44 7.15v.06c0 4.86-4.06 7.37-8.85 7.37h-5.47v6.83c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29l-.01-20.12zm8.12 10.98c3.73 0 6.18-2 6.18-4.96v-.06c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92l5.57-.01zM93.6 18.5c0-.71.58-1.29 1.25-1.29.71 0 1.29.58 1.29 1.29v20.28c0 .71-.58 1.29-1.29 1.29-.68 0-1.25-.58-1.25-1.29V18.5zM102.74 18.53c0-.68.58-1.26 1.26-1.26h.35c.58 0 .93.29 1.29.74l13.68 17.45v-17c0-.68.55-1.26 1.26-1.26.68 0 1.22.58 1.22 1.26v20.35c0 .68-.48 1.19-1.16 1.19h-.13c-.55 0-.94-.32-1.32-.77l-13.98-17.87v17.45c0 .68-.55 1.26-1.26 1.26-.68 0-1.22-.58-1.22-1.26l.01-20.28zM128.17 18.5c0-.71.58-1.29 1.26-1.29.71 0 1.29.58 1.29 1.29v12.33l12.85-13.17c.29-.26.58-.45 1-.45.68 0 1.22.61 1.22 1.26 0 .35-.16.64-.42.9l-7.98 7.92 8.56 10.56c.22.29.35.55.35.94 0 .68-.58 1.29-1.29 1.29-.48 0-.81-.26-1.03-.58l-8.4-10.46-4.86 4.86v4.89c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29V18.5z"/></g><g class="logo-glasses--desktop" fill="#d22856"><path d="M43.09 19.31c.25 0 .49.01.73.03a2.495 2.495 0 00-2.14-1.22c-.88 0-1.61-.57-1.88-1.35-.73.21-1.43.48-2.09.82.06.02.12.04.19.04 1.1 0 2 .9 2 2 0 .1-.01.19-.03.28 1.01-.39 2.09-.6 3.22-.6z"/><path d="M60.46 28.02c0-.01-5.17-21.36-5.17-21.36C54.93 4.3 52.69 0 46.69 0c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5c4.86 0 5.58 3.73 5.64 4.14l4.77 19.7h-2.07c-.44-3.56-2.45-6.63-5.31-8.52a2.5 2.5 0 00-1.53 2.3c0 .09-.02.17-.03.26 1.99 1.36 3.42 3.49 3.83 5.96.08.49.13.99.13 1.5s-.05 1.01-.13 1.5c-.72 4.27-4.42 7.53-8.9 7.53-4.47 0-8.18-3.26-8.9-7.53-.08-.49-.14-.99-.14-1.5s.05-1.01.14-1.5c.15-.88.43-1.71.81-2.48a1.995 1.995 0 01-1.85-1.98c0-.19-.08-.36-.19-.49a11.84 11.84 0 00-1.79 4.96h-1.82c-.74-5.93-5.8-10.53-11.93-10.53S6.23 20.92 5.49 26.84H3.42l4.77-19.7C8.25 6.73 8.97 3 13.83 3c.83 0 1.5-.67 1.5-1.5S14.65 0 13.83 0c-6.01 0-8.24 4.3-8.6 6.65 0 0-5.17 21.36-5.18 21.36-.27 1.11.53 1.83 1.43 1.83H5.5c.08.63.21 1.24.39 1.83.06-.11.1-.22.1-.35 0-1.1.9-2 2-2 .17 0 .32.02.48.06-.04-.34-.07-.69-.07-1.04 0-.51.05-1.01.13-1.5.72-4.27 4.42-7.53 8.9-7.53s8.18 3.26 8.9 7.53c.08.49.14.99.14 1.5s-.05 1.01-.14 1.5a9.023 9.023 0 01-14.29 5.74c-.35.3-.8.49-1.3.49-.41 0-.75.34-.75.75 0 .29-.06.56-.18.81 2.07 1.71 4.72 2.74 7.61 2.74 6.13 0 11.19-4.6 11.93-10.53h1.81c.74 5.93 5.8 10.53 11.93 10.53s11.19-4.6 11.93-10.53h4.02c.89 0 1.69-.71 1.42-1.82z"/></g><g class="logo-stars"><path fill="#283645" d="M50.69 16.13a4.5 4.5 0 01-4.5-4.5 4.5 4.5 0 01-4.5 4.5 4.5 4.5 0 014.5 4.5c0-2.49 2.01-4.5 4.5-4.5zM98.5 9.88c-2 0-3.62-1.62-3.62-3.62 0 2-1.62 3.62-3.63 3.62 2 0 3.63 1.62 3.63 3.62-.01-2 1.62-3.62 3.62-3.62zM37.9 19.63c-1.52 0-2.75-1.23-2.75-2.75 0 1.52-1.23 2.75-2.75 2.75 1.52 0 2.75 1.23 2.75 2.75 0-1.52 1.24-2.75 2.75-2.75zM10.73 34.07c-1.52 0-2.75-1.23-2.75-2.75 0 1.52-1.23 2.75-2.75 2.75 1.52 0 2.75 1.23 2.75 2.75 0-1.52 1.23-2.75 2.75-2.75z"/></g></svg>
+      </a>
+      <ul class="page-footer__list social">
         <li class="social__item"><a href="#" class="social__link social__link--tw"><span class="visually-hidden">Twitter</span></a></li>
         <li class="social__item"><a href="#" class="social__link social__link--fb"><span class="visually-hidden">Facebook</span></a></li>
         <li class="social__item"><a href="#" class="social__link  social__link--yt"><span class="visually-hidden">Youtube</span></a></li>
       </ul>
-      <p class="page-footer__developed developed">
-        Разработано
-        <a href="https://htmlacademy.ru/" class="developed__link"><span class="visually-hidden">htmlacademy.ru</span></a>
+      <p class="page-footer__developed developed">Разработано
+        <a href="https://htmlacademy.ru/" class="developed__link" aria-label="htmlacademy">
+          <svg title="htmlacademy" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 154.38 195.33" width="27" height="34"><path fill="#d22856" stroke="#d22856" stroke-miterlimit="10" d="M78 .59L77.19.5.5 8.54v140.57l76.69 45.63 76.69-45.63V8.54L78 .59zm65.85 142.82l-66.66 39.66-66.66-39.66V85.79L76.9 125.3l.11 7.16-45.53-27.1-.07 6.95 45.71 27.47.11 7.35-45.7-27.19-.07 6.95 45.71 27.47 46.15-27.62v-6.98l-.06.03V97.1l20.57-12.28v58.59zm-.05-66.06l-18.24 10.74-8.42 4.96-40.15-23.88-.07 6.95 34.32 20.41-.3.18-.74.44-4.88 2.87-28.33-16.86-.07 6.95 22.36 13.3-5.28 3.53-.13.08-16.89-9.95-.07 6.95 11.08 6.53-11.29 6.78-66.02-39.27 66.14-39.75v.01l66.98 39.03zm.05-6.99L76.83 30.85v-.01h-.02v.01L10.53 70.31V17.58l66.66-6.99 66.66 6.99v52.78z"/></svg>
+        </a>
       </p>
     </footer>
-  <script src="js/index.js">
+    <script src="js/index.js">
 
-  </script>
+    </script>
   </body>
 </html>
