Написал скрипт для слайдера

--- a/index.html
+++ b/index.html
@@ -91,18 +91,32 @@
       <article class="reviews">
         <h2 class="visually-hidden">Отзывы</h2>
         <ul class="reviews__list">
-          <li class="reviews__item">
+          <li class="reviews__item reviews__item--1 reviews__item--show">
             <b class="reviews__author">Николай Петров</b>
             <span class="reviews__author--desc">25лет, водитель трамвая</span>
             <blockquote class="reviews__text">
               &laquo; Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился со своей будущей женой в комментариях к выложенной фотографии! &raquo;
             </blockquote>
           </li>
+          <li class="reviews__item reviews__item--2">
+            <b class="reviews__author">Николай Иванов</b>
+            <span class="reviews__author--desc">45лет, водитель тролейбуса</span>
+            <blockquote class="reviews__text">
+              &laquo; Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился со своей будущей женой в комментариях к выложенной фотографии! &raquo;
+            </blockquote>
+          </li>
+          <li class="reviews__item reviews__item--3">
+            <b class="reviews__author">Николай Александрович</b>
+            <span class="reviews__author--desc">355лет, водитель автобуса</span>
+            <blockquote class="reviews__text">
+              &laquo; Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился со своей будущей женой в комментариях к выложенной фотографии! &raquo;
+            </blockquote>
+          </li>
         </ul>
         <ul class="reviews__control slider__control">
-          <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
-          <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
-          <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
+          <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--one slider__toggle--active"></button></li>
+          <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--twoo"></button></li>
+          <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--three"></button></li>
         </ul>
         <ul class="reviews__button-control button-control">
           <li class="button-control__item button-control__item--next"><button type="button" class="button-control__btn button-control__btn--next"><span class="visually-hidden">Следующий</span></button></li>
