--- a/form.html
+++ b/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Конкурс на путешествие</title>
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
     <header class="page-header page-header--nojs">
       <div class="page-header__wrap">
-        <a href="#" class="page-header__logo">
+        <a href="index.html" class="page-header__logo">
           <svg class="logo-mobile" viewBox="0 0 74.43 22.86" width="75" height="22"><g class="logo-name" fill="#FFF"><path d="M0 1.45C0 .74.58.16 1.26.16h7.18c5.09 0 8.44 2.7 8.44 7.15v.06c0 4.86-4.06 7.37-8.85 7.37H2.54v6.83c0 .71-.58 1.29-1.29 1.29-.67 0-1.25-.58-1.25-1.29V1.45zm8.11 10.98c3.73 0 6.18-2 6.18-4.96v-.06c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92h5.57zM21.73 1.29c0-.71.58-1.29 1.25-1.29.71 0 1.29.58 1.29 1.29v20.28c0 .71-.58 1.29-1.29 1.29-.68 0-1.25-.58-1.25-1.29V1.29zM30.87 1.32c0-.68.58-1.26 1.26-1.26h.35c.58 0 .93.29 1.29.74l13.68 17.45v-17C47.45.58 48 0 48.71 0c.68 0 1.22.58 1.22 1.26V21.6c0 .68-.48 1.19-1.16 1.19h-.13c-.55 0-.93-.32-1.32-.77L33.35 4.15V21.6c0 .68-.55 1.26-1.26 1.26-.68 0-1.22-.58-1.22-1.26V1.32zM56.3 1.29c0-.71.58-1.29 1.26-1.29.71 0 1.29.58 1.29 1.29v12.33L71.69.45c.29-.26.58-.45 1-.45.68 0 1.22.61 1.22 1.26 0 .35-.16.64-.42.9l-7.98 7.92 8.56 10.56c.22.29.35.55.35.93 0 .68-.58 1.29-1.29 1.29-.48 0-.81-.26-1.03-.58l-8.4-10.46-4.86 4.86v4.89c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29l.01-20.28z"/></g></svg>
           <svg class="logo-tablet" viewBox="0 0 146.3 40.37" width="147" height="40"><g class="logo-name" fill="#FFF"><path d="M71.87 18.66c0-.71.58-1.29 1.26-1.29h7.18c5.09 0 8.44 2.7 8.44 7.15v.06c0 4.86-4.06 7.37-8.85 7.37h-5.47v6.83c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29l-.01-20.12zm8.12 10.98c3.73 0 6.18-2 6.18-4.96v-.06c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92l5.57-.01zM93.6 18.5c0-.71.58-1.29 1.25-1.29.71 0 1.29.58 1.29 1.29v20.28c0 .71-.58 1.29-1.29 1.29-.68 0-1.25-.58-1.25-1.29V18.5zM102.74 18.53c0-.68.58-1.26 1.26-1.26h.35c.58 0 .93.29 1.29.74l13.68 17.45v-17c0-.68.55-1.26 1.26-1.26.68 0 1.22.58 1.22 1.26v20.35c0 .68-.48 1.19-1.16 1.19h-.13c-.55 0-.94-.32-1.32-.77l-13.98-17.87v17.45c0 .68-.55 1.26-1.26 1.26-.68 0-1.22-.58-1.22-1.26l.01-20.28zM128.17 18.5c0-.71.58-1.29 1.26-1.29.71 0 1.29.58 1.29 1.29v12.33l12.85-13.17c.29-.26.58-.45 1-.45.68 0 1.22.61 1.22 1.26 0 .35-.16.64-.42.9l-7.98 7.92 8.56 10.56c.22.29.35.55.35.94 0 .68-.58 1.29-1.29 1.29-.48 0-.81-.26-1.03-.58l-8.4-10.46-4.86 4.86v4.89c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29V18.5z"/></g><path class="logo-glasses" fill="#FFF" d="M60.46 28.02c0-.01-5.17-21.36-5.17-21.36C54.93 4.3 52.69 0 46.69 0c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5c4.86 0 5.58 3.73 5.64 4.14l4.77 19.7h-2.07c-.74-5.93-5.8-10.53-11.93-10.53s-11.19 4.6-11.93 10.53h-1.82c-.74-5.93-5.8-10.53-11.93-10.53S6.23 20.92 5.49 26.84H3.42l4.77-19.7C8.25 6.73 8.97 3 13.83 3c.83 0 1.5-.67 1.5-1.5S14.65 0 13.83 0c-6.01 0-8.24 4.3-8.6 6.65 0 0-5.17 21.36-5.18 21.36-.27 1.11.53 1.83 1.43 1.83H5.5c.74 5.93 5.8 10.53 11.93 10.53s11.19-4.6 11.93-10.53h1.81c.74 5.93 5.8 10.53 11.93 10.53s11.19-4.6 11.93-10.53h4.01c.89 0 1.69-.71 1.42-1.82zm-34.15 1.82c-.71 4.27-4.42 7.53-8.9 7.53s-8.18-3.26-8.9-7.53c-.08-.49-.13-.99-.13-1.5s.05-1.01.13-1.5c.71-4.27 4.42-7.53 8.9-7.53s8.18 3.26 8.9 7.53c.08.49.14.99.14 1.5 0 .52-.05 1.02-.14 1.5zm25.68 0c-.72 4.27-4.42 7.53-8.9 7.53-4.47 0-8.18-3.26-8.9-7.53-.08-.49-.14-.99-.14-1.5s.05-1.01.14-1.5c.72-4.27 4.42-7.53 8.9-7.53s8.18 3.26 8.9 7.53c.08.49.13.99.13 1.5.01.52-.05 1.02-.13 1.5z"/></svg>
           <svg class="logo-desktop" viewBox="0 0 146.3 40.37" width="147" height="40"><g class="logo-name" fill="#FFF"><path d="M71.87 18.66c0-.71.58-1.29 1.26-1.29h7.18c5.09 0 8.44 2.7 8.44 7.15v.06c0 4.86-4.06 7.37-8.85 7.37h-5.47v6.83c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29l-.01-20.12zm8.12 10.98c3.73 0 6.18-2 6.18-4.96v-.06c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92l5.57-.01zM93.6 18.5c0-.71.58-1.29 1.25-1.29.71 0 1.29.58 1.29 1.29v20.28c0 .71-.58 1.29-1.29 1.29-.68 0-1.25-.58-1.25-1.29V18.5zM102.74 18.53c0-.68.58-1.26 1.26-1.26h.35c.58 0 .93.29 1.29.74l13.68 17.45v-17c0-.68.55-1.26 1.26-1.26.68 0 1.22.58 1.22 1.26v20.35c0 .68-.48 1.19-1.16 1.19h-.13c-.55 0-.94-.32-1.32-.77l-13.98-17.87v17.45c0 .68-.55 1.26-1.26 1.26-.68 0-1.22-.58-1.22-1.26l.01-20.28zM128.17 18.5c0-.71.58-1.29 1.26-1.29.71 0 1.29.58 1.29 1.29v12.33l12.85-13.17c.29-.26.58-.45 1-.45.68 0 1.22.61 1.22 1.26 0 .35-.16.64-.42.9l-7.98 7.92 8.56 10.56c.22.29.35.55.35.94 0 .68-.58 1.29-1.29 1.29-.48 0-.81-.26-1.03-.58l-8.4-10.46-4.86 4.86v4.89c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29V18.5z"/></g><g class="logo-glasses--desktop" fill="#FFF"><path d="M43.09 19.31c.25 0 .49.01.73.03a2.495 2.495 0 00-2.14-1.22c-.88 0-1.61-.57-1.88-1.35-.73.21-1.43.48-2.09.82.06.02.12.04.19.04 1.1 0 2 .9 2 2 0 .1-.01.19-.03.28 1.01-.39 2.09-.6 3.22-.6z"/><path d="M60.46 28.02c0-.01-5.17-21.36-5.17-21.36C54.93 4.3 52.69 0 46.69 0c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5c4.86 0 5.58 3.73 5.64 4.14l4.77 19.7h-2.07c-.44-3.56-2.45-6.63-5.31-8.52a2.5 2.5 0 00-1.53 2.3c0 .09-.02.17-.03.26 1.99 1.36 3.42 3.49 3.83 5.96.08.49.13.99.13 1.5s-.05 1.01-.13 1.5c-.72 4.27-4.42 7.53-8.9 7.53-4.47 0-8.18-3.26-8.9-7.53-.08-.49-.14-.99-.14-1.5s.05-1.01.14-1.5c.15-.88.43-1.71.81-2.48a1.995 1.995 0 01-1.85-1.98c0-.19-.08-.36-.19-.49a11.84 11.84 0 00-1.79 4.96h-1.82c-.74-5.93-5.8-10.53-11.93-10.53S6.23 20.92 5.49 26.84H3.42l4.77-19.7C8.25 6.73 8.97 3 13.83 3c.83 0 1.5-.67 1.5-1.5S14.65 0 13.83 0c-6.01 0-8.24 4.3-8.6 6.65 0 0-5.17 21.36-5.18 21.36-.27 1.11.53 1.83 1.43 1.83H5.5c.08.63.21 1.24.39 1.83.06-.11.1-.22.1-.35 0-1.1.9-2 2-2 .17 0 .32.02.48.06-.04-.34-.07-.69-.07-1.04 0-.51.05-1.01.13-1.5.72-4.27 4.42-7.53 8.9-7.53s8.18 3.26 8.9 7.53c.08.49.14.99.14 1.5s-.05 1.01-.14 1.5a9.023 9.023 0 01-14.29 5.74c-.35.3-.8.49-1.3.49-.41 0-.75.34-.75.75 0 .29-.06.56-.18.81 2.07 1.71 4.72 2.74 7.61 2.74 6.13 0 11.19-4.6 11.93-10.53h1.81c.74 5.93 5.8 10.53 11.93 10.53s11.19-4.6 11.93-10.53h4.02c.89 0 1.69-.71 1.42-1.82z"/></g><g class="logo-stars"><path fill="#D22856" d="M50.69 16.13a4.5 4.5 0 01-4.5-4.5 4.5 4.5 0 01-4.5 4.5 4.5 4.5 0 014.5 4.5c0-2.49 2.01-4.5 4.5-4.5zM98.5 9.88c-2 0-3.62-1.62-3.62-3.62 0 2-1.62 3.62-3.63 3.62 2 0 3.63 1.62 3.63 3.62-.01-2 1.62-3.62 3.62-3.62zM37.9 19.63c-1.52 0-2.75-1.23-2.75-2.75 0 1.52-1.23 2.75-2.75 2.75 1.52 0 2.75 1.23 2.75 2.75 0-1.52 1.24-2.75 2.75-2.75zM10.73 34.07c-1.52 0-2.75-1.23-2.75-2.75 0 1.52-1.23 2.75-2.75 2.75 1.52 0 2.75 1.23 2.75 2.75 0-1.52 1.23-2.75 2.75-2.75z"/></g></svg>
@@ -18,13 +19,14 @@
       <nav class="main-nav main-nav--closed">
         <button type="button" class="main-nav__toggle"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a href="index.html" class="main-nav__link">Главная</a></li>
+          <li class="main-nav__item"><a href="index.html"class="main-nav__link">Главная</a></li>
           <li class="main-nav__item"><a href="photo.html" class="main-nav__link">Фотографии</a></li>
           <li class="main-nav__item"><a class="main-nav__link main-nav__link--active">Конкурс</a></li>
           <li class="main-nav__item"><a href="https://htmlacademy.ru/" class="main-nav__link">Html Academy</a></li>
         </ul>
       </nav>
     </header>
+
     <main class="page-main">
       <h1 class="visually-hidden">Конкурс на путешествие с пинк</h1>
 
@@ -54,7 +56,7 @@
             </p>
           </fieldset>
 
-          <div class="form__container">
+          <div class="form__container-progress">
             <fieldset class="form__group form__group-progress">
             <legend class="form__label">Ваши безбашенные достижения в путешествии</legend>
             <div class="form__group-progress--wrap">
@@ -83,22 +85,26 @@
             </div>
           </fieldset>
 
-          <fieldset class="form__group form__group-applications">
-            <legend class="form__label">Скаким приложением путешествовали?</legend>
-            <input class="form__radio" type="radio" name="applications" value="iOs" id="iOs" checked><label for="iOs">Pink для iOs</label>
-            <input class="form__radio" type="radio" name="applications" value="Android" id="Android"><label for="Android">Pink для Android</label>
-            <input class="form__radio" type="radio" name="applications" value="Windows" id="Windows"><label for="Windows">Windows Phone</label>
-          </fieldset>
+          <div class="form__container-applications">
+            <fieldset class="form__group form__group-applications">
+              <legend class="form__label">Скаким приложением путешествовали?</legend>
+              <div class="form__group-applications--wrap">
+                <p><input class="form__radio" type="radio" name="applications" value="iOs" id="iOs" checked><label for="iOs">Pink для iOs</label></p>
+                <p><input class="form__radio" type="radio" name="applications" value="Android" id="Android"><label for="Android">Pink для Android</label></p>
+                <p><input class="form__radio" type="radio" name="applications" value="Windows" id="Windows"><label for="Windows">Windows Phone</label></p>
+              </div>
+            </fieldset>
+          </div>
 
           <fieldset class="form__group form__group-emotions">
             <legend class="form__label">Опишите свои эмоции</legend>
-            <textarea name="emotions" rows="8" cols="80" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+            <textarea name="emotions" rows="2" cols="80" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </fieldset>
 
-          <button type="submit" class="form__button">Отправить форму</button>
+          <button type="submit" class="form__btn form__button"><span>Отправить форму</span></button>
 
           <p class="form__necessarily">
-            <span>*</span>-Обязательные поля
+            <span class="form__necessarily--symbol">*</span> - Обязательные <span class="form__necessarily--wrap">для заполнения</span> поля
           </p>
         </form>
       </section>
@@ -120,14 +126,22 @@
       </p>
     </footer>
     <div class="message__failure message">
-      <b class="message__title">Что-то пошло не так!</b>
-      <p class="message__text">Прверьте поля выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button type="button" name="button" class="form__button">Ок</button>
+      <div class="message__failure--1">
+        <b class="message__title">Что-то пошло не так!</b>
+        <p class="message__text">Прверьте поля выделенные красным, скорее всего вы забыли их заполнить</p>
+      </div>
+      <div class="message__failure--2">
+        <button type="button" name="button" class="form__btn form__btn--send"><span>Ок</span></button>
+      </div>
     </div>
     <div class="message__send message">
-      <b class="message__title">Ваша заявка отправлена</b>
-      <p class="message__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-      <button type="button" name="button" class="form__button">Закрыть окно</button>
+      <div class="message__send--1">
+        <b class="message__title">Ваша заявка отправлена</b>
+        <p class="message__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+      </div>
+      <div class="message__send--2">
+        <button type="button" name="button" class="form__btn form--btn--closed"><span>Закрыть окно</span></button>
+      </div>
     </div>
     <script src="js/index.js"></script>
   </body>
