--- a/work/index.html
+++ b/work/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Pink Главная страница</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="Магазин интернет приложений Pink для поиска в сети Google">
+    <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
@@ -208,6 +210,9 @@
       </p>
     </footer>
     <script src="js/index.js">
+
+    </script>
+    <script src="js/picturefill.js">
 
     </script>
   </body>
