--- a/work/photo.html
+++ b/work/photo.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Фотографии пользователей</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
@@ -200,6 +201,9 @@
       </p>
     </footer>
     <script src="js/index.js">
+
+    </script>
+    <script src="js/picturefill.js">
 
     </script>
   </body>
