--- a/work/form.html
+++ b/work/form.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Конкурс на путешествие</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
@@ -144,5 +145,6 @@
       </div>
     </div>
     <script src="js/index.js"></script>
+    <script src="js/picturefill.js"></script>
   </body>
 </html>
