--- a/work/photo.html
+++ b/work/photo.html
@@ -11,7 +11,7 @@
 
     <header class="page-header page-header--nojs">
       <div class="page-header__wrap">
-        <a href="#" class="page-header__logo">
+        <a href="index.html" class="page-header__logo">
           <svg class="logo-mobile" viewBox="0 0 74.43 22.86" width="75" height="22"><g class="logo-name" fill="#FFF"><path d="M0 1.45C0 .74.58.16 1.26.16h7.18c5.09 0 8.44 2.7 8.44 7.15v.06c0 4.86-4.06 7.37-8.85 7.37H2.54v6.83c0 .71-.58 1.29-1.29 1.29-.67 0-1.25-.58-1.25-1.29V1.45zm8.11 10.98c3.73 0 6.18-2 6.18-4.96v-.06c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92h5.57zM21.73 1.29c0-.71.58-1.29 1.25-1.29.71 0 1.29.58 1.29 1.29v20.28c0 .71-.58 1.29-1.29 1.29-.68 0-1.25-.58-1.25-1.29V1.29zM30.87 1.32c0-.68.58-1.26 1.26-1.26h.35c.58 0 .93.29 1.29.74l13.68 17.45v-17C47.45.58 48 0 48.71 0c.68 0 1.22.58 1.22 1.26V21.6c0 .68-.48 1.19-1.16 1.19h-.13c-.55 0-.93-.32-1.32-.77L33.35 4.15V21.6c0 .68-.55 1.26-1.26 1.26-.68 0-1.22-.58-1.22-1.26V1.32zM56.3 1.29c0-.71.58-1.29 1.26-1.29.71 0 1.29.58 1.29 1.29v12.33L71.69.45c.29-.26.58-.45 1-.45.68 0 1.22.61 1.22 1.26 0 .35-.16.64-.42.9l-7.98 7.92 8.56 10.56c.22.29.35.55.35.93 0 .68-.58 1.29-1.29 1.29-.48 0-.81-.26-1.03-.58l-8.4-10.46-4.86 4.86v4.89c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29l.01-20.28z"/></g></svg>
           <svg class="logo-tablet" viewBox="0 0 146.3 40.37" width="147" height="40"><g class="logo-name" fill="#FFF"><path d="M71.87 18.66c0-.71.58-1.29 1.26-1.29h7.18c5.09 0 8.44 2.7 8.44 7.15v.06c0 4.86-4.06 7.37-8.85 7.37h-5.47v6.83c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29l-.01-20.12zm8.12 10.98c3.73 0 6.18-2 6.18-4.96v-.06c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92l5.57-.01zM93.6 18.5c0-.71.58-1.29 1.25-1.29.71 0 1.29.58 1.29 1.29v20.28c0 .71-.58 1.29-1.29 1.29-.68 0-1.25-.58-1.25-1.29V18.5zM102.74 18.53c0-.68.58-1.26 1.26-1.26h.35c.58 0 .93.29 1.29.74l13.68 17.45v-17c0-.68.55-1.26 1.26-1.26.68 0 1.22.58 1.22 1.26v20.35c0 .68-.48 1.19-1.16 1.19h-.13c-.55 0-.94-.32-1.32-.77l-13.98-17.87v17.45c0 .68-.55 1.26-1.26 1.26-.68 0-1.22-.58-1.22-1.26l.01-20.28zM128.17 18.5c0-.71.58-1.29 1.26-1.29.71 0 1.29.58 1.29 1.29v12.33l12.85-13.17c.29-.26.58-.45 1-.45.68 0 1.22.61 1.22 1.26 0 .35-.16.64-.42.9l-7.98 7.92 8.56 10.56c.22.29.35.55.35.94 0 .68-.58 1.29-1.29 1.29-.48 0-.81-.26-1.03-.58l-8.4-10.46-4.86 4.86v4.89c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29V18.5z"/></g><path class="logo-glasses" fill="#FFF" d="M60.46 28.02c0-.01-5.17-21.36-5.17-21.36C54.93 4.3 52.69 0 46.69 0c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5c4.86 0 5.58 3.73 5.64 4.14l4.77 19.7h-2.07c-.74-5.93-5.8-10.53-11.93-10.53s-11.19 4.6-11.93 10.53h-1.82c-.74-5.93-5.8-10.53-11.93-10.53S6.23 20.92 5.49 26.84H3.42l4.77-19.7C8.25 6.73 8.97 3 13.83 3c.83 0 1.5-.67 1.5-1.5S14.65 0 13.83 0c-6.01 0-8.24 4.3-8.6 6.65 0 0-5.17 21.36-5.18 21.36-.27 1.11.53 1.83 1.43 1.83H5.5c.74 5.93 5.8 10.53 11.93 10.53s11.19-4.6 11.93-10.53h1.81c.74 5.93 5.8 10.53 11.93 10.53s11.19-4.6 11.93-10.53h4.01c.89 0 1.69-.71 1.42-1.82zm-34.15 1.82c-.71 4.27-4.42 7.53-8.9 7.53s-8.18-3.26-8.9-7.53c-.08-.49-.13-.99-.13-1.5s.05-1.01.13-1.5c.71-4.27 4.42-7.53 8.9-7.53s8.18 3.26 8.9 7.53c.08.49.14.99.14 1.5 0 .52-.05 1.02-.14 1.5zm25.68 0c-.72 4.27-4.42 7.53-8.9 7.53-4.47 0-8.18-3.26-8.9-7.53-.08-.49-.14-.99-.14-1.5s.05-1.01.14-1.5c.72-4.27 4.42-7.53 8.9-7.53s8.18 3.26 8.9 7.53c.08.49.13.99.13 1.5.01.52-.05 1.02-.13 1.5z"/></svg>
           <svg class="logo-desktop" viewBox="0 0 146.3 40.37" width="147" height="40"><g class="logo-name" fill="#FFF"><path d="M71.87 18.66c0-.71.58-1.29 1.26-1.29h7.18c5.09 0 8.44 2.7 8.44 7.15v.06c0 4.86-4.06 7.37-8.85 7.37h-5.47v6.83c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29l-.01-20.12zm8.12 10.98c3.73 0 6.18-2 6.18-4.96v-.06c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92l5.57-.01zM93.6 18.5c0-.71.58-1.29 1.25-1.29.71 0 1.29.58 1.29 1.29v20.28c0 .71-.58 1.29-1.29 1.29-.68 0-1.25-.58-1.25-1.29V18.5zM102.74 18.53c0-.68.58-1.26 1.26-1.26h.35c.58 0 .93.29 1.29.74l13.68 17.45v-17c0-.68.55-1.26 1.26-1.26.68 0 1.22.58 1.22 1.26v20.35c0 .68-.48 1.19-1.16 1.19h-.13c-.55 0-.94-.32-1.32-.77l-13.98-17.87v17.45c0 .68-.55 1.26-1.26 1.26-.68 0-1.22-.58-1.22-1.26l.01-20.28zM128.17 18.5c0-.71.58-1.29 1.26-1.29.71 0 1.29.58 1.29 1.29v12.33l12.85-13.17c.29-.26.58-.45 1-.45.68 0 1.22.61 1.22 1.26 0 .35-.16.64-.42.9l-7.98 7.92 8.56 10.56c.22.29.35.55.35.94 0 .68-.58 1.29-1.29 1.29-.48 0-.81-.26-1.03-.58l-8.4-10.46-4.86 4.86v4.89c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29V18.5z"/></g><g class="logo-glasses--desktop" fill="#FFF"><path d="M43.09 19.31c.25 0 .49.01.73.03a2.495 2.495 0 00-2.14-1.22c-.88 0-1.61-.57-1.88-1.35-.73.21-1.43.48-2.09.82.06.02.12.04.19.04 1.1 0 2 .9 2 2 0 .1-.01.19-.03.28 1.01-.39 2.09-.6 3.22-.6z"/><path d="M60.46 28.02c0-.01-5.17-21.36-5.17-21.36C54.93 4.3 52.69 0 46.69 0c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5c4.86 0 5.58 3.73 5.64 4.14l4.77 19.7h-2.07c-.44-3.56-2.45-6.63-5.31-8.52a2.5 2.5 0 00-1.53 2.3c0 .09-.02.17-.03.26 1.99 1.36 3.42 3.49 3.83 5.96.08.49.13.99.13 1.5s-.05 1.01-.13 1.5c-.72 4.27-4.42 7.53-8.9 7.53-4.47 0-8.18-3.26-8.9-7.53-.08-.49-.14-.99-.14-1.5s.05-1.01.14-1.5c.15-.88.43-1.71.81-2.48a1.995 1.995 0 01-1.85-1.98c0-.19-.08-.36-.19-.49a11.84 11.84 0 00-1.79 4.96h-1.82c-.74-5.93-5.8-10.53-11.93-10.53S6.23 20.92 5.49 26.84H3.42l4.77-19.7C8.25 6.73 8.97 3 13.83 3c.83 0 1.5-.67 1.5-1.5S14.65 0 13.83 0c-6.01 0-8.24 4.3-8.6 6.65 0 0-5.17 21.36-5.18 21.36-.27 1.11.53 1.83 1.43 1.83H5.5c.08.63.21 1.24.39 1.83.06-.11.1-.22.1-.35 0-1.1.9-2 2-2 .17 0 .32.02.48.06-.04-.34-.07-.69-.07-1.04 0-.51.05-1.01.13-1.5.72-4.27 4.42-7.53 8.9-7.53s8.18 3.26 8.9 7.53c.08.49.14.99.14 1.5s-.05 1.01-.14 1.5a9.023 9.023 0 01-14.29 5.74c-.35.3-.8.49-1.3.49-.41 0-.75.34-.75.75 0 .29-.06.56-.18.81 2.07 1.71 4.72 2.74 7.61 2.74 6.13 0 11.19-4.6 11.93-10.53h1.81c.74 5.93 5.8 10.53 11.93 10.53s11.19-4.6 11.93-10.53h4.02c.89 0 1.69-.71 1.42-1.82z"/></g><g class="logo-stars"><path fill="#D22856" d="M50.69 16.13a4.5 4.5 0 01-4.5-4.5 4.5 4.5 0 01-4.5 4.5 4.5 4.5 0 014.5 4.5c0-2.49 2.01-4.5 4.5-4.5zM98.5 9.88c-2 0-3.62-1.62-3.62-3.62 0 2-1.62 3.62-3.63 3.62 2 0 3.63 1.62 3.63 3.62-.01-2 1.62-3.62 3.62-3.62zM37.9 19.63c-1.52 0-2.75-1.23-2.75-2.75 0 1.52-1.23 2.75-2.75 2.75 1.52 0 2.75 1.23 2.75 2.75 0-1.52 1.24-2.75 2.75-2.75zM10.73 34.07c-1.52 0-2.75-1.23-2.75-2.75 0 1.52-1.23 2.75-2.75 2.75 1.52 0 2.75 1.23 2.75 2.75 0-1.52 1.23-2.75 2.75-2.75z"/></g></svg>
@@ -56,7 +56,7 @@
               <span class="time">(5 минут назад)</span>
               <p class="box__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
               <button class="like-button" type="button" name="button">Лайк</button>
-              <span class="like">Нравится:<span class="like__number">215</span></span>
+              <span class="like">Нравится: <span class="like__number">215</span></span>
             </figcaption>
           </figure>
           <figure class="box">
@@ -73,7 +73,7 @@
               <span class="time">(5 часов назад)</span>
               <p class="box__text">Вчера он на луну летал, сегодня в руки к нам попал.</p>
               <button class="like-button" type="button" name="button">Лайк</button>
-              <span class="like">Нравится:<span class="like__number">356</span></span>
+              <span class="like">Нравится: <span class="like__number">356</span></span>
             </figcaption>
           </figure>
           <figure class="box">
@@ -90,7 +90,7 @@
               <span class="time">(12 часов назад)</span>
               <p class="box__text">Соседи будут рады!</p>
               <button class="like-button" type="button" name="button">Лайк</button>
-              <span class="like">Нравится:<span class="like__number">666</span></span>
+              <span class="like">Нравится: <span class="like__number">666</span></span>
             </figcaption>
           </figure>
           <figure class="box">
@@ -107,7 +107,7 @@
               <span class="time">(20 часов назад)</span>
               <p class="box__text">Здесь могла быть ваша цитата о высоком и вечном.</p>
               <button class="like-button" type="button" name="button">Лайк</button>
-              <span class="like">Нравится:<span class="like__number">215</span></span>
+              <span class="like">Нравится: <span class="like__number">215</span></span>
             </figcaption>
           </figure>
           <figure class="box">
@@ -124,7 +124,7 @@
               <span class="time">(25 часов назад)</span>
               <p class="box__text">Самая кубанская в мире!</p>
               <button class="like-button" type="button" name="button">Лайк</button>
-              <span class="like">Нравится:<span class="like__number">4</span></span>
+              <span class="like">Нравится: <span class="like__number">4</span></span>
             </figcaption>
           </figure>
           <figure class="box">
@@ -141,7 +141,7 @@
               <span class="time">(40 часов назад)</span>
               <p class="box__text">Где снег-то?</p>
               <button class="like-button" type="button" name="button">Лайк</button>
-              <span class="like">Нравится:<span class="like__number">150</span></span>
+              <span class="like">Нравится: <span class="like__number">150</span></span>
             </figcaption>
           </figure>
           <figure class="box">
@@ -158,7 +158,7 @@
               <span class="time">(45 часов назад)</span>
               <p class="box__text">Всем GM и взаимные лайки!</p>
               <button class="like-button" type="button" name="button">Лайк</button>
-              <span class="like">Нравится:<span class="like__number">2560</span></span>
+              <span class="like">Нравится: <span class="like__number">2560</span></span>
             </figcaption>
           </figure>
         </div>
@@ -166,19 +166,41 @@
       </section>
 
       <section class="photo-download">
+        <h2 class="visually-hidden">Загрузка фотографий</h2>
         <p class="download__text">
-          Затмите их всех! Выкладывайте все, что накопилось в телефоне!
+          Затмите их всех! <br> Выкладывайте все, что накопилось в телефоне!
         </p>
-        <img class="download__img" src="" alt="Фото">
-        <div class="download__editor">
-          <button type="button" class="editor__button editor__button--active"><img class="crop" src="" alt="Обрезка"></button>
-          <button type="button" class="editor__button"><img class="fill" src="" alt="Заливка"></button>
-          <button type="button" class="editor__button"><img class="contrast" src="" alt="Контраст"></button>
-          <input type="range" name="level" value="" min="0" max="100">
-        </div>
-        <div class="download__buttons">
-          <button class="download__button download__button--post button" type="button" name="download">Запостить</button>
-          <button class="download__button download__button--cansel button" type="button" name="download">Отмена</button>
+        <div class="photo-download__wrap">
+          <div class="wrap">
+            <picture>
+            <source type="image/webp" media="(min-width: 1100px)" srcset="img/photo-7-desktop.webp, img/photo-7-desktop2x.webp 2x">
+            <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-7-tablet.webp, img/photo-7-tablet2x.webp 2x">
+            <source type="image/webp" srcset="img/photo-7-mobile.webp, img/photo-7-mobile2x.webp 2x">
+            <source media="(min-width: 1100px)" srcset="img/photo-7-desktop.jpg, img/photo-7-desktop2x.jpg 2x">
+            <source media="(min-width: 660px)" srcset="img/photo-7-tablet.jpg, img/photo-7-tablet2x.jpg 2x">
+            <img class="download__img" src="img/photo-7-mobile.jpg" srcset="img/photo-7-mobile2x.jpg 2x" alt="Фото">
+            </picture>
+            <div>
+              <div class="download__editor">
+            <p class="editor__button-wrap">
+              <label class="editor__button" for="crop"><svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="44" height="44"><path fill="none" d="M0 0h48v48H0V0z"/><path class="svg" fill="#283645" d="M34 30h4V14c0-2.21-1.79-4-4-4H18v4h16v16zm-20 4V2h-4v8H2v4h8v20c0 2.21 1.79 4 4 4h20v8h4v-8h8v-4H14z"/></svg></label>
+              <input type="range" name="crop" value="" min="0" max="100" id="crop">
+            </p>
+            <p class="editor__button-wrap">
+              <label class="editor__button" for="fill"><svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="48" height="43"><path fill="none" d="M0 0h48v48H0V0z"/><path class="svg" fill="#283645" d="M33.12 17.88L15.24 0l-2.83 2.83 4.76 4.76L6.88 17.88a3 3 0 000 4.24l11 11c.58.59 1.35.88 2.12.88s1.54-.29 2.12-.88l11-11a3 3 0 000-4.24zM10.41 20L20 10.42 29.59 20H10.41zM38 23s-4 4.33-4 7c0 2.21 1.79 4 4 4s4-1.79 4-4c0-2.67-4-7-4-7z"/><path class="svg" d="M0 40h48v3H0z"/></svg></label>
+              <input type="range" name="fill" value="" min="0" max="100" id="fill">
+            </p>
+            <p class="editor__button-wrap editor__button-wrap--active">
+              <label class="editor__button" for="contrast"><svg class="contrast"  xmlns="http://www.w3.org/2000/svg" viewBox="-7.45 -8.15 31.92 31.92" width="32" height="32"><path class="svg" fill="#283645" d="M8.51-4.15c6.59 0 11.96 5.37 11.96 11.96 0 6.59-5.37 11.96-11.96 11.96S-3.45 14.41-3.45 7.81c0-6.59 5.36-11.96 11.96-11.96m0-4C-.31-8.15-7.45-1-7.45 7.81S-.3 23.77 8.51 23.77s15.96-7.15 15.96-15.96S17.32-8.15 8.51-8.15z"/><path class="svg" fill="#283645" d="M8 16.52c4.71 0 8.52-3.81 8.52-8.52 0-4.71-3.81-8.52-8.52-8.52"/></svg></label>
+              <input type="range" name="contrast" value="" min="0" max="100" id="contrast">
+            </p>
+          </div>
+              <div class="download__buttons">
+            <button class="download__button download__button--post button" type="button" name="download"><span>Запостить</span></button>
+            <button class="download__button download__button--cansel button" type="button" name="download"><span>Отмена</span></button>
+          </div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -200,11 +222,7 @@
         </a>
       </p>
     </footer>
-    <script src="js/index.js">
-
-    </script>
-    <script src="js/picturefill.js">
-
-    </script>
+    <script src="js/index.js"></script>
+    <script src="js/picturefill.js"></script>
   </body>
 </html>
